# cross-modal-stereo-matching

./: .gitignore  CMakeLists.txt  README.md  calib.npy  clean.py  config.yaml  infer.py  requirements.txt  save_model.py  train.py  visualize_results.py
config/: matching.yml  rgb_left_nir_right.yml
data_analysis/: classification_metrics.py  data_storage.py  dataset_eda.py  regression_analysis.py  visualize_results.py
dataset/: ms2_dataset.py  simple_depth_dataset.py  train_data_dataset.py
models/: cost_volume.py  cross_attention.py  disparity_regression.py  feature_extractor.py  losses.py  mdp_module.py  regularization.py  rgb_nir_model.py  simple_depth_model.py
src/: rectify_pair.cpp  stereo_match.cpp
tools/: export_calib.py  run_dataset_testing.py  run_dataset_testing_all_modes.py
